objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>BusinessUnit</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Size__c</fullName>
        <inlineHelpText>Business size refers to the size of a company’s operations.</inlineHelpText>
        <label>Business Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Micro-sized business: less than 10 employees</fullName>
                </value>
                <value>
                    <fullName>Small-sized business: 10-49 employees</fullName>
                </value>
                <value>
                    <fullName>Medium business: 50-249 employees</fullName>
                </value>
                <value>
                    <fullName>Large-sized business: more than 250 employees.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Account_Num__c</fullName>
        <label>Account Num.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Average_Donation__c</fullName>
        <formula>CRMforNonProfit__celkova_hodnota_finacni_dary__c / CRMforNonProfit__pocet_financnich_daru__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Donation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DniMeziDary__c</fullName>
        <formula>IF(   CRMforNonProfit__pocet_financnich_daru__c &gt; 0, ( DATEVALUE(  CRMforNonProfit__datum_posledniho_financniho_daru__c ) -  CRMforNonProfit__First_Transaction_Date__c ) / CRMforNonProfit__pocet_financnich_daru__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Počet dní mezi dary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__DniOdPoslednihoDaru__c</fullName>
        <formula>TODAY() - DATEVALUE(  CRMforNonProfit__datum_posledniho_financniho_daru__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Počet dní od posledního daru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__First_Transaction_Date__c</fullName>
        <label>First Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__ICO__c</fullName>
        <label>Company Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount_14_36__c</fullName>
        <label>Transaction Amount (14-36)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount_14__c</fullName>
        <label>Transaction Amount (14)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount_2008__c</fullName>
        <label>Transaction Amount 2008</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Amount_2009__c</fullName>
        <label>Transaction Amount 2009</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Count_14_36__c</fullName>
        <label>Transaction Count (14-36)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Count_14__c</fullName>
        <label>Transaction Count (14)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Count_2008__c</fullName>
        <label>Transaction Count 2008</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Transaction_Count_2009__c</fullName>
        <label>Transaction Count 2009</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__celkova_hodnota_finacni_dary__c</fullName>
        <label>Celková hodnota - finační dary</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__datum_posledni_kampane__c</fullName>
        <label>Datum poslední kampaně</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__datum_posledniho_financniho_daru__c</fullName>
        <label>Datum posledního finančního daru</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__pocet_financnich_daru__c</fullName>
        <label>Počet finančních darů</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomURL__c</fullName>
        <label>CustomURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ptest108__c</fullName>
        <description>Creating external Field test</description>
        <externalId>true</externalId>
        <label>Ptest6__c</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ptest132__c</fullName>
        <description>Creating external Field test</description>
        <externalId>true</externalId>
        <label>Ptest885__c</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ptest143__c</fullName>
        <description>Creating external Field test</description>
        <externalId>true</externalId>
        <label>Ptest347__c</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Tier__c</fullName>
        <label>Service Tier</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Platinum</fullName>
                </value>
                <value>
                    <fullName>2 - Gold</fullName>
                </value>
                <value>
                    <fullName>3 - Silver</fullName>
                </value>
                <value>
                    <fullName>4 - Bronze</fullName>
                </value>
                <value>
                    <fullName>5 - Brass</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                    <isActive>false</isActive>
                    <label>Undefined</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                    <default>true</default>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__BOFC_ACC_Name__c</fullName>
        <description>Please don&apos;t delete this field as it will be used in BOFC lead Conversion process</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BOFC ACC Name</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_type</fullName>
        <active>true</active>
        <label>Business type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
   ISBLANK(  AccountNumber ),
   NOT(ISNUMBER(  AccountNumber ))
)</errorConditionFormula>
        <errorDisplayField>AccountNumber</errorDisplayField>
        <errorMessage>Account Number is not numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_Numeric</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
ISBLANK(AccountNumber),
NOT(ISNUMBER(AccountNumber))
)</errorConditionFormula>
        <errorMessage>The account number should be Numeric</errorMessage>
    </validationRules>
</CustomObject>